--- a/browser/index.html
+++ b/browser/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>avalon</title>
     <link href="/stylesheets/style.css" rel="stylesheet">
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/bundle.js" defer></script>
 </head>
 <body>
