--- a/browser/index.html
+++ b/browser/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>avalon</title>
-    <link href="/stylesheets/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zilla+Slab" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+    <link href="/stylesheets/style.css" rel="stylesheet" />
     <script src="/bundle.js" defer></script>
 </head>
 <body>
